@@ -2283,7 +2283,7 @@ void CLogDlg::OnEnLinkMsgview(NMHDR *pNMHDR, LRESULT *pResult)
 			if (it->Compare(url) == 0)
 			{
 				url = m_ProjectProperties.GetBugIDUrl(url);
-				url = GetAbsoluteUrlFromRelativeUrl(url);
+				url = CAppUtils::GetAbsoluteUrlFromRelativeUrl(m_sRepositoryRoot, url);
 				bBugIDFound = true;
 				break;
 			}
@@ -4293,7 +4293,7 @@ void CLogDlg::ShowContextMenuForRevisions(CWnd* /*pWnd*/, CPoint point)
 		case ID_VIEWREV:
 			{
 				CString url = m_ProjectProperties.sWebViewerRev;
-				url = GetAbsoluteUrlFromRelativeUrl(url);
+				url = CAppUtils::GetAbsoluteUrlFromRelativeUrl(m_sRepositoryRoot, url);
 				url.Replace(_T("%REVISION%"), revSelected.ToString());
 				if (!url.IsEmpty())
 					ShellExecute(this->m_hWnd, _T("open"), url, NULL, NULL, SW_SHOWDEFAULT);					
@@ -4305,7 +4305,7 @@ void CLogDlg::ShowContextMenuForRevisions(CWnd* /*pWnd*/, CPoint point)
 				CString sRoot = GetRepositoryRoot(CTSVNPath(relurl));
 				relurl = relurl.Mid(sRoot.GetLength());
 				CString url = m_ProjectProperties.sWebViewerPathRev;
-				url = GetAbsoluteUrlFromRelativeUrl(url);
+				url = CAppUtils::GetAbsoluteUrlFromRelativeUrl(m_sRepositoryRoot, url);
 				url.Replace(_T("%REVISION%"), revSelected.ToString());
 				url.Replace(_T("%PATH%"), relurl);
 				if (!url.IsEmpty())
@@ -4854,7 +4854,7 @@ void CLogDlg::ShowContextMenuForChangedpaths(CWnd* /*pWnd*/, CPoint point)
 				SVNRev rev = pLogEntry2->GetRevision();
 				CString relurl = changedpaths[0];
 				CString url = m_ProjectProperties.sWebViewerPathRev;
-				url = GetAbsoluteUrlFromRelativeUrl(url);
+				url = CAppUtils::GetAbsoluteUrlFromRelativeUrl(m_sRepositoryRoot, url);
 				url.Replace(_T("%REVISION%"), rev.ToString());
 				url.Replace(_T("%PATH%"), relurl);
 				relurl = relurl.Mid(relurl.Find('/'));
@@ -4923,39 +4923,6 @@ void CLogDlg::OnEditCopy()
 		CopyChangedSelectionToClipBoard();
 	else
 		CopySelectionToClipBoard();
-}
-
-CString CLogDlg::GetAbsoluteUrlFromRelativeUrl(const CString& url)
-{
-	// is the URL a relative one?
-	if (url.Left(2).Compare(_T("^/")) == 0)
-	{
-		// URL is relative to the repository root
-		CString url1 = m_sRepositoryRoot + url.Mid(1);
-		TCHAR buf[INTERNET_MAX_URL_LENGTH];
-		DWORD len = url.GetLength();
-		if (UrlCanonicalize((LPCTSTR)url1, buf, &len, 0) == S_OK)
-			return CString(buf, len);
-		return url1;
-	}
-	else if (url[0] == '/')
-	{
-		// URL is relative to the server's hostname
-		CString sHost;
-		// find the server's hostname
-		int schemepos = m_sRepositoryRoot.Find(_T("//"));
-		if (schemepos >= 0)
-		{
-			sHost = m_sRepositoryRoot.Left(m_sRepositoryRoot.Find('/', schemepos+3));
-			CString url1 = sHost + url;
-			TCHAR buf[INTERNET_MAX_URL_LENGTH];
-			DWORD len = url.GetLength();
-			if (UrlCanonicalize((LPCTSTR)url, buf, &len, 0) == S_OK)
-				return CString(buf, len);
-			return url1;
-		}
-	}
-	return url;
 }
 
 void CLogDlg::OnLvnKeydownLoglist(NMHDR *pNMHDR, LRESULT *pResult)
